# stm32f072b-disco

./: Cargo.toml  README.md  openocd_program.sh
examples/: adc.rs  gpio_circly.rs  i2c_hal_ssd1306alphabeter.rs  panic-ramdump.rs  serial_echo.rs  serial_echo_irq.rs  touch.rs  watchdog.rs
src/: led.rs  lib.rs
